Jupyter Notebook files V2

--- a/4_2022_WC_Qatar_Model_creation.ipynb
+++ b/4_2022_WC_Qatar_Model_creation.ipynb
@@ -705,12 +705,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 65 matches in the Qatar 2022 World Cup.\n"
+      "There are 64 matches in the Qatar 2022 World Cup.\n"
      ]
     }
    ],
    "source": [
-    "print(f\"There are {df_fixture_data.shape[0] + 1} matches in the Qatar 2022 World Cup.\")"
+    "print(f\"There are {df_fixture_data.shape[0]} matches in the Qatar 2022 World Cup.\")"
    ]
   },
   {
