--- a/3_2022_WC_Qatar_Data_cleaning.ipynb
+++ b/3_2022_WC_Qatar_Data_cleaning.ipynb
@@ -286,7 +286,9 @@
     }
    ],
    "source": [
-    "df_fixture_data.info()"
+    "df_fixture_data.info()\n",
+    "\n",
+    "# Shows that there is no null data."
    ]
   },
   {
@@ -438,9 +440,6 @@
    "source": [
     "# DataFrame 'pyarrow'\n",
     "df_historical_data = pd.read_csv('data/FIFA_Worldcup_historical_data.csv', \n",
-    "                                 engine='python', \n",
-    "                                 encoding='utf-8', \n",
-    "                                 #on_bad_lines=True,\n",
     "                                )\n",
     "df_historical_data"
    ]
@@ -801,148 +800,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "50c8de4d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>First_team</th>\n",
-       "      <th>Score</th>\n",
-       "      <th>Second_team</th>\n",
-       "      <th>Year</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>France</td>\n",
-       "      <td>4–1</td>\n",
-       "      <td>Mexico</td>\n",
-       "      <td>1930</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Argentina</td>\n",
-       "      <td>1–0</td>\n",
-       "      <td>France</td>\n",
-       "      <td>1930</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Chile</td>\n",
-       "      <td>3–0</td>\n",
-       "      <td>Mexico</td>\n",
-       "      <td>1930</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Chile</td>\n",
-       "      <td>1–0</td>\n",
-       "      <td>France</td>\n",
-       "      <td>1930</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Argentina</td>\n",
-       "      <td>6–3</td>\n",
-       "      <td>Mexico</td>\n",
-       "      <td>1930</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>896</th>\n",
-       "      <td>Russia</td>\n",
-       "      <td>2–2</td>\n",
-       "      <td>Croatia</td>\n",
-       "      <td>2018</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>897</th>\n",
-       "      <td>France</td>\n",
-       "      <td>1–0</td>\n",
-       "      <td>Belgium</td>\n",
-       "      <td>2018</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>898</th>\n",
-       "      <td>Croatia</td>\n",
-       "      <td>2–1</td>\n",
-       "      <td>England</td>\n",
-       "      <td>2018</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>899</th>\n",
-       "      <td>Belgium</td>\n",
-       "      <td>2–0</td>\n",
-       "      <td>England</td>\n",
-       "      <td>2018</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>900</th>\n",
-       "      <td>France</td>\n",
-       "      <td>4–2</td>\n",
-       "      <td>Croatia</td>\n",
-       "      <td>2018</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>900 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     First_team Score Second_team  Year\n",
-       "0       France    4–1      Mexico  1930\n",
-       "1    Argentina    1–0      France  1930\n",
-       "2        Chile    3–0      Mexico  1930\n",
-       "3        Chile    1–0      France  1930\n",
-       "4    Argentina    6–3      Mexico  1930\n",
-       "..          ...   ...         ...   ...\n",
-       "896     Russia    2–2     Croatia  2018\n",
-       "897     France    1–0     Belgium  2018\n",
-       "898    Croatia    2–1     England  2018\n",
-       "899    Belgium    2–0     England  2018\n",
-       "900     France    4–2     Croatia  2018\n",
-       "\n",
-       "[900 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_historical_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
    "id": "ce6f76ed",
    "metadata": {},
    "outputs": [
@@ -958,18 +815,19 @@
        " 46)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Unique values of the \"Score\" column\n",
     "df_historical_data.Score.unique(), len(df_historical_data.Score.unique())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "17053e9f",
    "metadata": {},
    "outputs": [
@@ -1011,7 +869,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1032,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "7dc35b5d",
    "metadata": {},
    "outputs": [],
@@ -1040,175 +898,6 @@
     "df_historical_data['First_team'] = df_historical_data.First_team.str.strip()\n",
     "df_historical_data['Score'] = df_historical_data.Score.str.strip()\n",
     "df_historical_data['Second_team'] = df_historical_data.Second_team.str.strip()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "e33d7599",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array(['4–1', '1–0', '3–0', '6–3', '3–1', '2–1', '4–0', '6–1', '4–2',\n",
-       "        '3–2', '7–1', '5–2', '1–1', '6–0', '3–3', '6–5', '2–0', '8–0',\n",
-       "        '5–1', '2–2', '5–0', '9–0', '8–3', '7–0', '7–2', '4–4', '7–5',\n",
-       "        '1–3', '7–3', '0–0', '5–3', '0–1', '4–3', '0–3', '0–2', '1–4',\n",
-       "        '0–7', '1–2', '1–5', '10–1', '2–3', '3–4', '2–4', '0–4', '2–5',\n",
-       "        '1–7'], dtype=object),\n",
-       " 46)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_historical_data.Score.unique(), len(df_historical_data.Score.unique())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "f7682786",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>First_team</th>\n",
-       "      <th>Score</th>\n",
-       "      <th>Second_team</th>\n",
-       "      <th>Year</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>France</td>\n",
-       "      <td>4–1</td>\n",
-       "      <td>Mexico</td>\n",
-       "      <td>1930</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Argentina</td>\n",
-       "      <td>1–0</td>\n",
-       "      <td>France</td>\n",
-       "      <td>1930</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Chile</td>\n",
-       "      <td>3–0</td>\n",
-       "      <td>Mexico</td>\n",
-       "      <td>1930</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Chile</td>\n",
-       "      <td>1–0</td>\n",
-       "      <td>France</td>\n",
-       "      <td>1930</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Argentina</td>\n",
-       "      <td>6–3</td>\n",
-       "      <td>Mexico</td>\n",
-       "      <td>1930</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>896</th>\n",
-       "      <td>Russia</td>\n",
-       "      <td>2–2</td>\n",
-       "      <td>Croatia</td>\n",
-       "      <td>2018</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>897</th>\n",
-       "      <td>France</td>\n",
-       "      <td>1–0</td>\n",
-       "      <td>Belgium</td>\n",
-       "      <td>2018</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>898</th>\n",
-       "      <td>Croatia</td>\n",
-       "      <td>2–1</td>\n",
-       "      <td>England</td>\n",
-       "      <td>2018</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>899</th>\n",
-       "      <td>Belgium</td>\n",
-       "      <td>2–0</td>\n",
-       "      <td>England</td>\n",
-       "      <td>2018</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>900</th>\n",
-       "      <td>France</td>\n",
-       "      <td>4–2</td>\n",
-       "      <td>Croatia</td>\n",
-       "      <td>2018</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>900 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    First_team Score Second_team  Year\n",
-       "0       France   4–1      Mexico  1930\n",
-       "1    Argentina   1–0      France  1930\n",
-       "2        Chile   3–0      Mexico  1930\n",
-       "3        Chile   1–0      France  1930\n",
-       "4    Argentina   6–3      Mexico  1930\n",
-       "..         ...   ...         ...   ...\n",
-       "896     Russia   2–2     Croatia  2018\n",
-       "897     France   1–0     Belgium  2018\n",
-       "898    Croatia   2–1     England  2018\n",
-       "899    Belgium   2–0     England  2018\n",
-       "900     France   4–2     Croatia  2018\n",
-       "\n",
-       "[900 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_historical_data"
    ]
   },
   {
@@ -1221,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "91c2924c",
    "metadata": {},
    "outputs": [
@@ -1352,7 +1041,7 @@
        "[900 rows x 4 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1363,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "id": "541acb50",
    "metadata": {},
    "outputs": [],
@@ -1374,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "id": "a59071fd",
    "metadata": {},
    "outputs": [
@@ -1466,7 +1155,7 @@
        "4  Argentina   6–3      Mexico  1930                6                 3"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1477,167 +1166,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "id": "4ed50cd0",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Remove \"Score\" column\n",
     "df_historical_data.drop(columns='Score', inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "e04eb4b2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>First_team</th>\n",
-       "      <th>Second_team</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>First_team_goals</th>\n",
-       "      <th>Second_team_goals</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>France</td>\n",
-       "      <td>Mexico</td>\n",
-       "      <td>1930</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Argentina</td>\n",
-       "      <td>France</td>\n",
-       "      <td>1930</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Chile</td>\n",
-       "      <td>Mexico</td>\n",
-       "      <td>1930</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Chile</td>\n",
-       "      <td>France</td>\n",
-       "      <td>1930</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Argentina</td>\n",
-       "      <td>Mexico</td>\n",
-       "      <td>1930</td>\n",
-       "      <td>6</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>896</th>\n",
-       "      <td>Russia</td>\n",
-       "      <td>Croatia</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>897</th>\n",
-       "      <td>France</td>\n",
-       "      <td>Belgium</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>898</th>\n",
-       "      <td>Croatia</td>\n",
-       "      <td>England</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>899</th>\n",
-       "      <td>Belgium</td>\n",
-       "      <td>England</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>900</th>\n",
-       "      <td>France</td>\n",
-       "      <td>Croatia</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>900 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    First_team Second_team  Year First_team_goals Second_team_goals\n",
-       "0       France      Mexico  1930                4                 1\n",
-       "1    Argentina      France  1930                1                 0\n",
-       "2        Chile      Mexico  1930                3                 0\n",
-       "3        Chile      France  1930                1                 0\n",
-       "4    Argentina      Mexico  1930                6                 3\n",
-       "..         ...         ...   ...              ...               ...\n",
-       "896     Russia     Croatia  2018                2                 2\n",
-       "897     France     Belgium  2018                1                 0\n",
-       "898    Croatia     England  2018                2                 1\n",
-       "899    Belgium     England  2018                2                 0\n",
-       "900     France     Croatia  2018                4                 2\n",
-       "\n",
-       "[900 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_historical_data"
    ]
   },
   {
@@ -1650,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "id": "f7a74c34",
    "metadata": {},
    "outputs": [],
@@ -1666,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "id": "49f1d059",
    "metadata": {},
    "outputs": [
@@ -1809,7 +1344,7 @@
        "[900 rows x 5 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1828,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "id": "c08b2aa5",
    "metadata": {},
    "outputs": [
@@ -1843,7 +1378,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1854,28 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "0c698c01",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['FirstTeam', 'SecondTeam', 'Year', 'FirstTeamGoals', 'SecondTeamGoals'], dtype='object')"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_historical_data.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "id": "90320ab3",
    "metadata": {},
    "outputs": [],
@@ -1888,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 29,
    "id": "cd782626",
    "metadata": {},
    "outputs": [
@@ -1903,7 +1417,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1922,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 30,
    "id": "6f26aee1",
    "metadata": {},
    "outputs": [
@@ -1977,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 31,
    "id": "1865351f",
    "metadata": {},
    "outputs": [],
